<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2009 OpenIntents.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/noteslist_preferences">

               
        <ListPreference
                android:key="sortorder"
                android:defaultValue="2"
                android:title="@string/preference_sortorder_title"
                android:summary="@string/preference_sortorder_summary"
                android:entries="@array/preference_sortorder_entries"
                android:entryValues="@array/preference_sortorder_entryvalues"
                android:dialogTitle="@string/preference_sortorder_dialog_title" />
                
        <CheckBoxPreference
        		android:key="marquee"
        		android:defaultValue="false"
        		android:title="@string/preference_marquee_title"
        		android:summary="@string/preference_marquee_summary" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/note_editor_preferences">

		<ListPreference android:key="fontsize"
			android:defaultValue="2" android:title="@string/preference_fontsize"
			android:summary="@string/preference_fontsize_summary"
			android:entries="@array/preference_fontsize_entries"
			android:entryValues="@array/preference_fontsize_entryvalues"
			android:dialogTitle="@string/preference_fontsize_dialog_title" />
               
        <CheckBoxPreference
                android:key="autolink"
                android:defaultValue="true"
                android:title="@string/preference_autolink_title"
                android:summaryOn="@string/preference_autolink_summary_on"
                android:summaryOff="@string/preference_autolink_summary_off" />

    </PreferenceCategory>
    
	<PreferenceCategory android:title="@string/preference_addons">
		<PreferenceScreen android:key="preference_screen_addons"
			android:title="@string/preference_get_addons" android:summary="@string/preference_get_addons_summary">
			<PreferenceCategory android:title="@string/preference_get_market_addons">

				<PreferenceScreen android:key="preference_market_extensions"
					android:title="@string/preference_extensions"
					android:summary="@string/preference_market_extensions_summary">
					<intent android:action="android.intent.action.VIEW"
						android:data="@string/preference_market_extensions_link" />
				</PreferenceScreen>
				<PreferenceScreen android:key="preference_market_themes"
					android:title="@string/preference_themes"
					android:summary="@string/preference_market_themes_summary">
					<intent android:action="android.intent.action.VIEW"
						android:data="@string/preference_market_themes_link" />
				</PreferenceScreen>
			</PreferenceCategory>
			<PreferenceCategory android:title="@string/preference_get_developer_addons">
				<PreferenceScreen android:title="@string/preference_extensions"
					android:summary="@string/preference_developer_extensions_summary">
					<intent android:action="android.intent.action.VIEW"
						android:data="@string/preference_developer_extensions_link" />
				</PreferenceScreen>
				<PreferenceScreen android:title="@string/preference_themes"
					android:summary="@string/preference_developer_themes_summary">
					<intent android:action="android.intent.action.VIEW"
						android:data="@string/preference_developer_themes_link" />
				</PreferenceScreen>
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceCategory>
	
</PreferenceScreen>
    
